--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,8 @@
 
   <!-- your app's js -->
   <script src="js/app.js"></script>
+  <script src="views/rates/ratesCtrl.js"></script>
+
 </head>
 <body ng-app="starter">
 
